better fix for sidebar not being on top of content on mobile

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,7 +66,6 @@ mat-sidenav-content {
 
 .sidenav {
   width: 250px;
-  z-index: 4 !important;
 }
 
 .active-link {
